# motioneyeos

./: .br-external.mk  .cvsignore  .defconfig  .flake8  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.in  .travis.yml  CHANGES  CONTRIBUTING.md  COPYING  Config.in  Config.in.legacy  DEVELOPERS  Dockerfile  ISSUE_TEMPLATE  Makefile  Makefile.legacy  MotionEyeOS_AP.txt  README  README.md  README.patches  TODO  boa.mk  build-docker.sh  build.sh  buildroot-documentation.html  busybox.mk  defconfig  dnsmasq.conf  docker-build.sh  hostapd.conf  os.conf  static_ip.conf  tiny.c  writeimage.sh
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
arch/: Config.in  Config.in.aarch64  Config.in.arc  Config.in.arm  Config.in.avr32  Config.in.bfin  Config.in.common  Config.in.csky  Config.in.m68k  Config.in.microblaze  Config.in.mips  Config.in.nds32  Config.in.nios2  Config.in.or1k  Config.in.powerpc  Config.in.riscv  Config.in.sh  Config.in.sparc  Config.in.x86  Config.in.xtensa  arch.mk  arch.mk.arc  arch.mk.csky  arch.mk.riscv  arch.mk.xtensa
board/: raspberrypi0w
boot/: Config.in  common.mk
configs/: aarch64_efi_defconfig  acmesystems_aria_g25_128mb_defconfig  acmesystems_aria_g25_256mb_defconfig  acmesystems_arietta_g25_128mb_defconfig  acmesystems_arietta_g25_256mb_defconfig  altera_socdk_defconfig  altera_sockit_defconfig  amarula_a64_relic_defconfig  amarula_vyasa_rk3288_defconfig  andes_ae3xx_defconfig  arcturus_ucls1012a_defconfig  arcturus_ucp1020_defconfig  arm_foundationv8_defconfig  arm_juno_defconfig  arm_nptl_toolchain_defconfig  arm_toolchain_defconfig  armadeus_apf27_defconfig  armadeus_apf28_defconfig  armadeus_apf51_defconfig  armadeus_apf9328_defconfig  asus_tinker_rk3288_defconfig  at91rm9200df_defconfig  at91rm9200df_ext_bare_defconfig  at91rm9200df_ext_defconfig  at91sam9260dfc_defconfig  at91sam9260dfc_ext_bare_defconfig  at91sam9260dfc_ext_defconfig  at91sam9260eknf_defconfig  at91sam9260pf_defconfig  at91sam9261ek_defconfig  at91sam9261ek_ext_bare_defconfig  at91sam9261ek_ext_defconfig  at91sam9263ek_defconfig  at91sam9263ek_ext_bare_defconfig  at91sam9263ek_ext_defconfig  at91sam9g20dfc_defconfig  at91sam9g20dfc_ext_bare_defconfig  at91sam9g20dfc_ext_defconfig  at91sam9g45m10ek_defconfig  at91sam9rlek_defconfig  (+301 more)
docs/: Glibc_vs_uClibc.html  README  README.diskimage  TESTING.html  U-boot.html  about.html  buildroot-documentation.html  buildroot.html  contribute.html  copyright.txt  developer.html  docs.html  download.html  footer.html  git.html  header.html  images  index.html  lists.html  news.html  patches.html  robots.txt  sponsors.html  stylesheet.css  subversion.html  support.html
fs/: Config.in  common.mk
linux/: 0001-timeconst.pl-Eliminate-Perl-warning.patch.conditional  Config.ext.in  Config.in  Config.tools.in  linux-3.2.5-0001-avr32-select-generic-atomic64_t-support.patch  linux-ext-aufs.mk  linux-ext-ev3dev-linux-drivers.mk  linux-ext-fbtft.mk  linux-ext-ocf-linux.mk  linux-ext-rtai.mk  linux-ext-xenomai.mk  linux-tool-cpupower.mk  linux-tool-perf.mk  linux-tool-selftests.mk  linux.hash  linux.mk
make/: autoconf.mk  automake.mk  bash.mk  berkeleydb.mk  binutils-uclibc.mk  binutils.mk  bison.mk  boa.mk  bridge.mk  busybox.mk  bzip2.mk  ccache.mk  coreutils.mk  cramfsroot.mk  customize.mk  dhcp_relay.mk  diffutils.mk  dnsmasq.mk  dnsmasq1.mk  dropbear_sshd.mk  ed.mk  file.mk  (+81 more)
package/elf2flt/src/: Makefile.in  README  config.sub  configure.in  e1-elf2flt.ld  flat.h  flthdr.c
(+21768 files in other folders)
